--- a/manifest.json
+++ b/manifest.json
@@ -27,12 +27,10 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        ["<all_urls>"]
-      ],
-      "js": [
-        "content.js"
-      ]
+      "matches": 
+        ["<all_urls>"],
+      "js": 
+      ["content.js"]
     }
   ]
 }
