--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,35 @@
 {
-  "manifest_version": 3,
-  "name": "Webguard",
-  "version": "1.2",
-  "description": "Intercepts navigation, scans with VirusTotal, and blocks malicious sites.",
-  "permissions": ["tabs", "scripting", "webNavigation", "storage", "alarms", "activeTab","cookies","webRequest"],
-  "host_permissions": ["<all_urls>", "https://www.virustotal.com/api/v3/*"],
-  "background": {
-      "service_worker": "background.js"
-  },
-  "content_scripts": [
-      {
-          "matches": ["<all_urls>"],
-          "js": ["content.js"]
-      }
-  ]
+    "manifest_version": 3,
+    "name": "Website Security Interceptor",
+    "version": "1.6",
+    "permissions": [
+        "tabs",
+        "scripting",
+        "webNavigation",
+        "storage",
+        "alarms",
+        "declarativeNetRequest"
+    ],
+    "host_permissions": ["<all_urls>", "https://www.virustotal.com/api/v3/*"],
+    "background": {
+        "service_worker": "background.js"
+    },
+    "action": {
+      "default_popup": "popup/popup.html"
+    },
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["content.js"]
+        }
+    ],
+    "declarative_net_request": {
+        "rule_resources": [
+            {
+                "id": "blockRules",
+                "enabled": true,
+                "path": "rules.json"
+            }
+        ]
+    }
 }
